# Prog4-Game-Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Odyssey.sln  launch.json  tasks.json
Data/: ghost.tga  pacman.tga
Data/Levels/: Level1.json
Odyssey/: AnimatedTextureComponent.cpp  AnimatedTextureComponent.h  Audio.cpp  Audio.h  AudioSystem.cpp  AudioSystem.h  CameraComponent.h  CircleColliderComponent.cpp  CircleColliderComponent.h  ColliderComponent.cpp  ColliderComponent.h  Command.cpp  Command.h  Component.cpp  Component.h  Constants.h  Controller.cpp  Controller.h  DebugDrawer.cpp  DebugDrawer.h  DebugRenderer.cpp  DebugRenderer.h  Event.h  FPSCounter.h  Font.cpp  Font.h  GUI_Manager.cpp  GUI_Manager.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  GameTime.cpp  GameTime.h  HealthComponent.h  IAudio.h  IPrefab.h  ImGuiManager.cpp  ImGuiManager.h  InputManager.cpp  (+60 more)
Sandbox/: Sandbox.cpp  Sandbox.vcxproj
Testing/: Application.cpp  Testing.vcxproj  Testing.vcxproj.filters
Testing/src/: AchievementTest.h  Application.cpp  ButtonManagerComponent.cpp  ButtonManagerComponent.h  CardRenderPackage.h  Commands.cpp  Commands.h  EventData.h  Tichu.cpp  Tichu.h
Testing/src/Commands/: ButtonPressed.cpp  ButtonPressed.h  CardSelectCommand.cpp  CardSelectCommand.h  Commands.cpp  Commands.h
Testing/src/Components/: BubbleProjectileComponent.cpp  BubbleProjectileComponent.h  CardComponent.cpp  CardComponent.h  EnemyComponent.cpp  EnemyComponent.h  PlayerComponent.cpp  PlayerComponent.h  PlayerMovementComponent.cpp  PlayerMovementComponent.h  PlayerShootingComponent.cpp  PlayerShootingComponent.h
Testing/src/Components/Players/: AIPlayer.cpp  AIPlayer.h  AIPlayer_DMCTS.cpp  AIPlayer_DMCTS.h  AIPlayer_MCTS.cpp  AIPlayer_MCTS.h  HumanPlayer.cpp  HumanPlayer.h
Testing/src/Helpers/: MCTS.cpp  MCTS.h
Testing/src/Prefabs/: BubblePrefab.cpp  BubblePrefab.h  EnemyPrefab.cpp  EnemyPrefab.h  TilePrefab.cpp  TilePrefab.h
Testing/src/Scenes/: TestSCene3.cpp  TestSCene3.h  TestScene.cpp  TestScene.h  TestScene2.cpp  TestScene2.h  TichuScene.cpp  TichuScene.h  TwoPlayerScene.cpp  TwoPlayerScene.h
Testing/src/States/: EnemyStates.cpp  EnemyStates.h  PlayerStates.cpp  PlayerStates.h
bin-int/Debug-Win32/Testing/: Testing.exe.recipe  vc143.idb
bin-int/Debug-x64/Testing/: Testing.exe.recipe  vc143.idb
bin-int/Release-Win32/Testing/: Testing.exe.recipe
bin-int/Release-x64/Testing/: Testing.exe.recipe
build_web/: .ninja_deps  .ninja_log  CMakeCache.txt  Odyssey_web.data  Odyssey_web.html  Odyssey_web.js  Testing.html  Testing.js  build.ninja  cmake_install.cmake
